kubernetes/apps/kube-system/cilium/config/networkpolicies/baseline/01-baseline-deny-home-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-all-egress
spec:
  description: "Allow all egress except to home and storage subnets"
  endpointSelector: {}
  egress:
    - toCIDRSet:
        - cidr: "0.0.0.0/0"
          except:
            - "192.168.1.0/16"
            - "10.0.40.0/24"
    # Allow egress to kube-apiserver (virtual IP, not matchable by CIDR)
    - toEntities:
        - kube-apiserver
