kubernetes/apps/kube-system/cilium/config/networkpolicies/baseline/03-baseline-allow-prometheus-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-prometheus-ingress
spec:
  description: "Allow Prometheus to scrape metrics from all pods"
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
            app.kubernetes.io/name: prometheus
